# tezoro-yield-aggregator-stellar

./: .gitignore  README.md
contracts/: Cargo.toml  rust-toolchain.toml  tarpaulin.toml
contracts/blend-strategy/: Cargo.toml
contracts/blend-strategy/src/: lib.rs
contracts/blend-strategy/test_snapshots/test/: test_health_thresholds.1.json  test_initialize.1.json
contracts/contracts/blend-strategy/: Cargo.toml
contracts/contracts/blend-strategy/src/: events.rs  lib.rs  storage.rs
contracts/contracts/blend-strategy/test_snapshots/: test_accept_admin_correct_address_only.1.json  test_available_liquidity_bounded_by_tracked_balance.1.json  test_available_liquidity_zero_when_empty.1.json  test_cancel_nonexistent_upgrade_rejected.1.json  test_cancel_upgrade_admin_only.1.json  test_deposit_updates_tracked_balance.1.json  test_deposit_vault_only.1.json  test_deposit_while_paused_rejected.1.json  test_double_initialize_rejected.1.json  test_emergency_withdraw_by_admin_pulls_all.1.json  test_emergency_withdraw_by_vault_pulls_all.1.json  test_emergency_withdraw_empty_returns_zero.1.json  test_emergency_withdraw_vault_or_admin.1.json  test_execute_upgrade_after_custom_delay_reaches_deployer.1.json  test_execute_upgrade_before_delay_rejected.1.json  test_full_round_trip.1.json  test_harvest_by_admin_allowed.1.json  test_harvest_by_vault_returns_non_negative.1.json  test_initial_state.1.json  test_is_healthy_empty_pool_passes.1.json  test_is_healthy_rejects_above_utilization_ceiling.1.json  test_is_healthy_rejects_below_backstop_floor.1.json  test_is_healthy_tight_thresholds_still_pass_on_idle_pool.1.json  test_is_healthy_with_active_supply.1.json  test_multiple_deposits_accumulate.1.json  test_old_admin_loses_powers.1.json  test_partial_withdraw_reduces_balance.1.json  test_pause_admin_only.1.json  test_position_query_after_full_exit.1.json  test_propose_admin_admin_only.1.json  test_schedule_upgrade_admin_only.1.json  test_set_approval_buffer_admin_only.1.json  test_set_max_utilization_admin_only.1.json  test_set_min_backstop_admin_only.1.json  test_set_upgrade_delay_accepts_large_value.1.json  test_set_upgrade_delay_accepts_minimum.1.json  test_set_vault_admin_only.1.json  test_unpause_admin_only.1.json  test_upgrade_delay_below_minimum_rejected.1.json  test_withdraw_more_than_tracked_clamps.1.json  (+1 more)
contracts/contracts/blend-strategy/tests/: coverage_gaps.rs  integration.rs  security.rs
contracts/contracts/mock-strategy/: Cargo.toml
contracts/contracts/mock-strategy/src/: lib.rs
contracts/contracts/tezoro-common/: Cargo.toml
contracts/contracts/tezoro-common/src/: lib.rs  strategy.rs
contracts/contracts/tezoro-vault/: Cargo.toml
contracts/contracts/tezoro-vault/src/: errors.rs  events.rs  lib.rs  storage.rs
contracts/contracts/tezoro-vault/test_snapshots/: test_accept_admin_wrong_address_rejected.1.json  test_add_duplicate_strategy_rejected.1.json  test_add_strategy_admin_only.1.json  test_all_view_functions_return_initialized_values.1.json  test_allocate_blocked_when_strategy_unhealthy.1.json  test_allocate_deallocate_roundtrip.1.json  test_allocate_keeper_only.1.json  test_allocate_zero_rejected.1.json  test_attest_bridged_keeper_only.1.json  test_bridged_balance_affects_share_price.1.json  test_bridged_balance_expires_after_max_age.1.json  test_bridged_max_age_configurable.1.json  test_bridged_timestamp_bumps_ttl_when_nonzero.1.json  test_cancel_nonexistent_upgrade_rejected.1.json  test_cancel_upgrade_admin_only.1.json  test_collect_fees_with_zero_fee_bps_rejected.1.json  test_concurrent_deposits_fair_pricing.1.json  test_convert_empty_vault.1.json  test_convert_to_shares_and_back.1.json  test_deallocate_inactive_strategy_rejected.1.json  (+54 more)
contracts/mock-strategy/: Cargo.toml
contracts/mock-strategy/src/: lib.rs
contracts/scripts/: coverage.sh
contracts/tests/mainnet-fork/: Cargo.toml
contracts/vault/: Cargo.toml
(+83 files in other folders)
