[package]
name = "blend-strategy"
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
blend-contract-sdk = { workspace = true }
tezoro-common = { path = "../tezoro-common" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
blend-contract-sdk = { workspace = true, features = ["testutils"] }
tezoro-vault = { path = "../tezoro-vault", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[lints]
workspace = true
